<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/menu_results"
            android:icon="@drawable/ic_result"
            android:title="@string/test_results" />

        <!-- <item
             android:id="@+id/menu_history"
             android:icon="@drawable/ic_history"
             android:title="@string/history" />
 -->
        <item
            android:id="@+id/menu_refer"
            android:icon="@drawable/ic_share"
            android:title="@string/refer" />
        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/ic_info"
            android:title="@string/info" />

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_keyboard_return"
            android:title="@string/logout" />
    </group>
    <!--  <item android:title="Communicate">
          <menu>
              <item
                  android:id="@+id/menu_refer"
                  android:icon="@drawable/ic_share"
                  android:title="@string/menu_refer" />
              <item
                  android:id="@+id/menu_info"
                  android:icon="@drawable/ic_info"
                  android:title="@string/menu_info" />
          </menu>
      </item>-->
</menu>
