<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_20">

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    android:paddingLeft="2dp"
                    android:text="@string/Username" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    android:paddingLeft="2dp"
                    android:text="@string/First_Name" />

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/Last_Name" />

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/change_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/edtChangePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_weight="5"
                        android:background="@android:color/transparent"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/Password_bullets"
                        android:inputType="textPassword"
                        android:padding="@dimen/margin_10" />


                    <Button
                        android:id="@+id/btnChangePassword"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:layout_below="@+id/txtChangePassword"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="@dimen/margin_10"
                        android:background="@drawable/rounded_btn"
                        android:text="Change"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>


                <TextView
                    android:id="@+id/txtTelephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/Telephone" />

                <EditText
                    android:id="@+id/edtTelephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/txtAddress1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/Address_1" />

                <EditText
                    android:id="@+id/edtAddress1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/Address_2" />

                <EditText
                    android:id="@+id/edtAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/City" />

                <EditText
                    android:id="@+id/edtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/State" />

                <EditText
                    android:id="@+id/edtState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />



                <TextView
                    android:id="@+id/txtZIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/ZIP_Code" />

                <EditText
                    android:id="@+id/edtZIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtReceiveEmails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/Receive_Emails" />

                <CheckBox
                    android:id="@+id/ChkReceiveEmails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10" />

                <TextView
                    android:id="@+id/txtExamDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:paddingLeft="2dp"
                    android:text="@string/Exam_Date" />

                <EditText
                    android:id="@+id/edtExamDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:enabled="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnEditProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_btn"
                        android:text="Edit Profile"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/btnUpdateProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_btn"
                        android:text="Update Profile"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B2000000"
        android:clickable="true"
        android:visibility="gone" />

    <include layout="@layout/layout_change_password" />
</android.support.design.widget.CoordinatorLayout>